[package]
name = "yt-yew-021"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.28"
gloo-timers = "0.3.0"
js-sys = "0.3.64"
log = "0.4.20"
postcard = "1.0.8"
serde = { version = "1.0.188", features = ["derive"] }
time-humanize = "0.1.3"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["console"] }
yew = { version = "0.21", features = ["csr"] }
yew-agent = "0.3.0"
